--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 */__pycache__
 8lesson/app/__pycache__/handlers.cpython-311.pyc
 8lesson/app/__pycache__/keyboards.cpython-311.pyc
+7lesson/app/__pycache__/handlers.cpython-311.pyc
+7lesson/app/__pycache__/keyboards.cpython-311.pyc
